# graffiti-wall

./: README.md  pyproject.toml
gwall/: __init__.py  __main__.py  canvas.py  routes.py  sockets.py
gwall/snapshots/: .gitignore
gwall/static/: index.css  script.js
gwall/templates/: index.html
